--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.32.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
